--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,9 @@
+buildscript {
+    ext {
+        queryDslVersion = "5.0.0"
+    }
+}
+
 plugins {
     id 'java'
     id 'org.springframework.boot' version '2.7.7'
@@ -18,6 +24,7 @@ repositories {
     mavenCentral()
 }
 
+
 dependencies {
     testCompileOnly('org.projectlombok:lombok')
     testAnnotationProcessor('org.projectlombok:lombok')
@@ -32,8 +39,28 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     implementation('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.1.0')
+
+    implementation("com.querydsl:querydsl-jpa:${queryDslVersion}")
+
+    annotationProcessor(
+            "javax.persistence:javax.persistence-api",
+            "javax.annotation:javax.annotation-api",
+            "com.querydsl:querydsl-apt:${queryDslVersion}:jpa"
+    )
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+
+    doFirst {
+        delete file("$projectDir/build/generated")
+    }
+}
+
+sourceSets {
+    main {
+        java {
+            srcDirs = ["$projectDir/src/main/java", "$projectDir/build/generated"]
+        }
+    }
 }
