--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     implementation('io.springfox:springfox-swagger-ui:3.0.0')
 
     implementation('net.coobird:thumbnailator:0.4.19')
+
+    implementation("org.springframework.boot:spring-boot-starter-security")
 }
 
 tasks.named('test') {
