--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation('net.coobird:thumbnailator:0.4.19')
 
     implementation("org.springframework.boot:spring-boot-starter-security")
+    implementation("org.springframework.boot:spring-boot-starter-oauth2-client")
 
     implementation("org.thymeleaf.extras:thymeleaf-extras-springsecurity5")
 }
